--- a/css/style.css
+++ b/css/style.css
@@ -600,6 +600,40 @@ html[data-theme="dark"] .tag-list li {
     box-shadow: 0 0 0 2px var(--color-bg);
 }
 
+/* Blog */
+
+.blog-container {
+    position: relative;
+    padding: 4rem 4rem 3.5rem;
+    background: var(--surface-bg);
+    min-height: calc(100vh - var(--header--height));
+}
+.blog-title {
+    position: relative;
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+    color: var(--color-text);
+}
+
+.blog-title::before {
+    content: "";
+    position: absolute;
+    left:-20px;
+    top:50%;
+    transform:translateY(-50%);
+    height:70%; 
+    width: 6px;
+    border-radius: 4px;
+    background: var(--color-accent);
+    box-shadow: 0 0 0 1px rgba(0,0,0,.05), 0 2px 6px -2px rgba(0,0,0,.25);
+}
+
+.blog-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    line-height: 2;
+    color: var(--color-text);
+}
 
 
 /* Buttons */
@@ -630,10 +664,10 @@ html[data-theme="dark"] .tag-list li {
     --btn-border: var(--color-accent);
 }
 
-.btn.back {
+.btn.blog-back {
     position: fixed;
-    left: 5%;
-    top: 15%;
+    right: 3rem;
+    bottom: 5rem;
 }
 
 .btn.small {
@@ -801,7 +835,14 @@ html[data-theme="dark"] textarea {
 .theme-transition .hero-inner,
 .theme-transition .page-hero.mini,
 .theme-transition .nav-menu a,
-.theme-transition .nav-menu button.theme-btn {
+.theme-transition .nav-menu button.theme-btn,
+.theme-transition .btn,
+.theme-transition .btn.primary,
+.theme-transition .large-card,
+.theme-transition .large-card:before,
+.theme-transition .blog-container,
+.theme-transition .blog-content,
+.theme-transition .blog-title {
         transition: background-color .55s cubic-bezier(.4,.2,.2,1),
                                 color .45s cubic-bezier(.4,.2,.2,1),
                                 border-color .55s cubic-bezier(.4,.2,.2,1),
