--- a/templates/blogs_summary.html
+++ b/templates/blogs_summary.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>个人博客 | Blog</title>
     <meta name="description" content="个人博客，分享编程与生活的点滴" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
 </head>
 
 <body>
@@ -64,7 +64,7 @@
             <a class="card-link blog-list-item-link"></a>
         </article>
     </template>
-    <script src="js/main.js"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="js/blogs_list_load.js"></script>
 </body>
 
