--- a/templates/single_blog.html
+++ b/templates/single_blog.html
@@ -28,11 +28,13 @@
     <main class="blog-container">
         <article id="blog-content">
             <div id="blog-markdown">
-                <h2>标题加载中</h2>
-                <p>内容加载中</p>
+                <h2>{{ post.title }}</h2>
+                <div class="blog-body">
+                    {{ post_html | safe }}
+                </div>
             </div>
             <div class="blog-meta">
-                <span class="blog-date">发布日期加载中</span> | <span class="blog-author">作者加载中</span>
+                <span class="blog-date">{{ post.date_posted }}</span> | <span class="blog-author">{{ post.author_name }}</span>
             </div>
         </article>
     </main>
@@ -44,8 +46,6 @@
     <a class="btn primary blog-back" href="blogs_summary.html">返回</a>
     <button id="backToTop" aria-label="返回顶部" class="back-to-top" hidden>↑</button>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
-    <script src="js/single_blog_load.js"></script>
 </body>
 
 </html>
